--- a/src/components/logo/Logo.module.css
+++ b/src/components/logo/Logo.module.css
@@ -9,4 +9,8 @@
 
     display: flex;
     flex-direction: column;
+
+    &:focus-visible {
+        outline-offset: 0.4rem;
+    }
 }
